[gd_scene load_steps=6 format=2]

[ext_resource path="res://Main/SkyTile.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main/GUI/GUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Textures/cliff.png" type="Texture" id=4]
[ext_resource path="res://Game.gd" type="Script" id=6]

[node name="Node2D" type="Node2D"]
script = ExtResource( 6 )

[node name="SkyTiles" type="Node" parent="."]

[node name="Sky" parent="SkyTiles" instance=ExtResource( 1 )]
position = Vector2( 1024, -1024 )
tile_y_index = -1

[node name="Sky7" parent="SkyTiles" instance=ExtResource( 1 )]
position = Vector2( -1024, -1024 )
tile_x_index = -1
tile_y_index = -1

[node name="Sky2" parent="SkyTiles" instance=ExtResource( 1 )]
position = Vector2( 3072, -1024 )
tile_x_index = 1
tile_y_index = -1
label = "sky2"

[node name="Sky8" parent="SkyTiles" instance=ExtResource( 1 )]
position = Vector2( -1024, 1024 )
tile_x_index = -1
label = "sky2"

[node name="Sky3" parent="SkyTiles" instance=ExtResource( 1 )]
position = Vector2( 1024, 1024 )
label = "sky3"

[node name="Sky4" parent="SkyTiles" instance=ExtResource( 1 )]
position = Vector2( 3072, 1024 )
tile_x_index = 1
label = "sky4"

[node name="Sky5" parent="SkyTiles" instance=ExtResource( 1 )]
position = Vector2( 1024, 3072 )
tile_y_index = 1
label = "sky5"

[node name="Sky9" parent="SkyTiles" instance=ExtResource( 1 )]
position = Vector2( -1024, 3072 )
tile_x_index = -1
tile_y_index = 1
label = "sky5"

[node name="Sky6" parent="SkyTiles" instance=ExtResource( 1 )]
position = Vector2( 3072, 3072 )
tile_x_index = 1
tile_y_index = 1
label = "sky6"

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 100, 1024 )
terminal_horizontal_vel = 1200.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GUI" parent="CanvasLayer" instance=ExtResource( 3 )]
margin_right = 37.0
margin_bottom = 32.0

[node name="Cliff" type="Sprite" parent="."]
position = Vector2( 120, 488 )
scale = Vector2( 1.75164, 1.4276 )
z_index = 1
texture = ExtResource( 4 )
[connection signal="dive_status" from="Player" to="." method="_on_Player_dive_status"]
[connection signal="hover_status" from="Player" to="." method="_on_Player_hover_status"]
